WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117057
[sh4] Fix Overflow case of branchMul32 in baseline JIT
https://bugs.webkit.org/show_bug.cgi?id=117057
Summary
[sh4] Fix Overflow case of branchMul32 in baseline JIT
Julien Brianceau
Reported
2013-05-30 16:14:46 PDT
Current implementation of Overflow case in branchMul32 performs an unsigned multiplication whereas a signed multiplication is expected here.
Attachments
Fix Overflow case of branchMul32 in sh4 baseline JIT
(1.42 KB, patch)
2013-05-30 16:22 PDT
,
Julien Brianceau
oliver
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Fix Overflow case of branchMul32 in sh4 baseline JIT (with ChangeLog)
(2.21 KB, patch)
2013-05-31 00:17 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-05-30 16:22:52 PDT
Created
attachment 203393
[details]
Fix Overflow case of branchMul32 in sh4 baseline JIT
WebKit Commit Bot
Comment 2
2013-05-30 16:53:55 PDT
Comment on
attachment 203393
[details]
Fix Overflow case of branchMul32 in sh4 baseline JIT Rejecting
attachment 203393
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 203393, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: 117057. Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.appspot.com/results/728103
Julien Brianceau
Comment 3
2013-05-31 00:17:50 PDT
Created
attachment 203412
[details]
Fix Overflow case of branchMul32 in sh4 baseline JIT (with ChangeLog) Better with a ChangeLog, indeed.
WebKit Commit Bot
Comment 4
2013-05-31 11:22:47 PDT
Comment on
attachment 203412
[details]
Fix Overflow case of branchMul32 in sh4 baseline JIT (with ChangeLog) Clearing flags on attachment: 203412 Committed
r151033
: <
http://trac.webkit.org/changeset/151033
>
WebKit Commit Bot
Comment 5
2013-05-31 11:22:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug