[sh4] Fix Overflow case of branchMul32 in baseline JIT. https://bugs.webkit.org/show_bug.cgi?id=117057

Patch by Julien Brianceau <jbrianceau@nds.com> on 2013-05-31
Reviewed by Oliver Hunt.

Current implementation of Overflow case in branchMul32 performs an
unsigned multiplication whereas a signed multiplication is expected.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branchMul32):

Canonical link: https://commits.webkit.org/135349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151033 268f45cc-cd09-0410-ab3c-d52691b4dbfc